parcial1/ejercicio14.txt
adrian@adrian-virtualbox:~/Desktop/CTF$ python3 fixme2.py 
  File "/home/adrian/Desktop/CTF/fixme2.py", line 22
    if flag = "":
       ^^^^^^^^^
SyntaxError: invalid syntax. Maybe you meant '==' or ':=' instead of '='?
adrian@adrian-virtualbox:~/Desktop/CTF$ nano fixme2.py 
adrian@adrian-virtualbox:~/Desktop/CTF$ nano fixme2.py 
adrian@adrian-virtualbox:~/Desktop/CTF$ python3 fixme2.py 
That is correct! Here's your flag: picoCTF{3qu4l1ty_n0t_4551gnm3nt_e8814d03}
adrian@adrian-virtualbox:~/Desktop/CTF$ 

En este se hace lo mismo que en el pasado